<resources>
    <string name="app_name">InClass08</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_Current_Expenses">Current Expenses: </string>
    <string name="btn_Add">Add</string>
    <string name="lbl_No_Expense_Msg">There is no expense to show</string>
    <string name="ItemDisplay">Item List</string>
    <string name="lbl_Price">Price</string>
    <string name="title_activity_add_expense">AddExpense</string>
    <string name="AddExpenseLabel">Add an Expense</string>
    <string name="ExpenseNameLabel">Expense Name:</string>
    <string name="AddExpenseET" />
    <string name="AddExpenseHint">Expense Name</string>
    <string name="CategoryLabel">Category:</string>
    <string name="AmountLabel">Amount:</string>
    <string name="AddAmount" />
    <string name="AmountHint">Enter Amount</string>
    <string name="AddExpenseButton">Add Expense</string>
    <string name="CancelButton">Cancel</string>
    <string name="title_activity_show_expense">ShowExpense</string>
    <string name="ShowExpenseLabel">Expense Details</string>
    <string name="ExpenseNameShowLabel">Name:</string>
    <string name="ExpenseNameShow" />
    <string name="CategoryShow">Category:</string>
    <string name="CategoryShowData" />
    <string name="AmountShowLabel">Amount:</string>
    <string name="DateShowLabel">Date:</string>
    <string name="AmountShow" />
    <string name="ExpenseDateShow" />
    <string name="ButtonClose">Close</string>
    <string name="title_activity_edit_expense">EditExpense</string>
    <string name="buttonEdit">Edit Expense</string>
    <string name="EditExpenseLabel">Edit Expense</string>
    <string name="ExpenseNameLabelEdit">Expense Name</string>
    <string name="editTextExpNameLabel" />
    <string name="CategoryEditLabel">Category</string>
    <string name="AmountEditLabel">Amount</string>
    <string name="editAmountData" />
    <string name="ButtonCancel">Cancel</string>
    <string name="ButtonSave">Save</string>
</resources>
